shady-KISS-skin History
-------------------------------------------
2015-04-10:
- Added recchannelname in displaymenudetailrecordings
- Lightened textcolor


2015-04-09:
- Increased fontsize of current and nexttitle in displaychannel if subtitles are empty
- Fixed nonsense in displaymenurecordings 

2015-04-08:
- Reworked messagesbars
- Fixed area of setupiconbar

2015-04-07:
- Fixed fontsize of {numrecordingsfolder} > 99

2015-04-06:
- Fixed areas in weatherforecast

2015-04-05:
- Added setupparameter "Show timers and infos in mainmenu"
- Added third option for active menubars (gradient)
- Added divider (hyphen) between title and shorttetxts
- Rearranged setup
- Some cleanups

2015-04-03:
- Small fix for coloredbuttons

2015-04-02:
- Rearranged Weatherforecast-Main-View
- Added setupparameter for setting up numbers of menuitemsitems in all menus; cleanups

2015-02-31:
- Fixed bug in plug-weatherforecast-weatherforecast.xml
- Improved position and fontsize of temps in weatherforecast
- Removed some useless pics and code

2015-03-30:
- Changed some positions in weatherforecastdetails

2015-03-29:
- Added setup-parameter "Colored active buttons" and corresponding graphics

2015-03-27:
- Updated README an HISTORY
- Some cleanups
- Renamed nowBar to elapsedBar and fixed its width
- Added elapsedBar.svg
- Added setup-parameter "fadetime" used in
  displaychannel, -message, -audiotracks, -replay and -volume
- Fixed height of eventshorttext in displaymenutimers

2015-03-24:
- Changed shadows of WeatherCurrentMain

2015-03-23:
- Improvements for weatherfoecast
- Improvements for weatherforecast (II)
- Fixed weatherDivider
- Improvements for weatherforecast (III)

2015-03-22:
- Added stuff for WeatherForecast

2015-03-21:
- Fixed conditions in viewelement header
- Added vertical view for TVGuideNG
- Some optical improvements
- Added some orange icons

2015-03-20:
- Added templates for TVGuideNG

2015-03-06:
- Changed position of large posters